добавил обертку кнопке принять и тексту в форме, выровнил элементы и блоки по pp

--- a/source/form.html
+++ b/source/form.html
@@ -254,10 +254,12 @@
             </ul>
           </div>
         </section>
-        <button class="form__button button" type="sumbit">
-          Отправить заявку
-        </button>
-        <p class="form__text-required">* — Обязательные поля</p>
+        <div class="form__container-submit">
+          <button class="form__button button" type="sumbit">
+            Отправить заявку
+          </button>
+          <p class="form__text-required">* — Обязательные поля</p>
+        </div>
       </form>
     </main>
 
