приступил к catalog-page, стилизовал основной заголовок

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -61,10 +61,8 @@
       </div>
     </header>
 
-    <main class="main-container">
-      <h1 class="main-container__title main-container__title--catalog">
-        Каталог продукции
-      </h1>
+    <main class="main-container catalog-page">
+      <h1 class="catalog-page__title title">Каталог продукции</h1>
 
       <section class="catalog">
         <div class="catalog__wrapper">
