Стилизоваал отдельнкую карту card-show-more, добавил модификатор button--grey и его состояния

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -271,27 +271,19 @@
           <li class="catalog__item">
             <article class="card-show-more">
               <img
-                class="catalog-card__image catalog-card__image--show-more"
+                class="card-show-more__image"
                 src="./img/catalog-show-more.svg"
                 width="30"
                 height="30"
                 alt="показать ещё"
               />
-              <div
-                class="catalog-card__description catalog-card__description--show-more"
-              >
-                <h3
-                  class="catalog-card__heading catalog-card__heading--show-more"
-                >
-                  Показать еще 100500 товаров
-                </h3>
-                <p class="catalog-card__text">
-                  На самом деле вкусов гораздо больше!
-                </p>
-              </div>
-              <a
-                href="#"
-                class="catalog-card__link catalog-card__link--show-more button"
+              <h3 class="card-show-more__heading">
+                Показать еще 100500 товаров
+              </h3>
+              <p class="card-show-more__text">
+                На самом деле вкусов гораздо больше!
+              </p>
+              <a href="#" class="card-show-more__link button button--grey"
                 >Показать все</a
               >
             </article>
