Приступил к секции additional-product, стилизовал заголовок с линий

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -292,69 +292,65 @@
       </section>
 
       <section class="catalog-page__additional-products additional-products">
-        <div class="additional-products__wrapper">
-          <h2 class="additional-products__title">Дополнительные товары</h2>
-          <ul class="additional-product__list">
-            <li class="additional-product__item">
-              <article class="additional-product-card">
-                <h3 class="additional-product-card__heading">
-                  Сахарозаменитель
-                </h3>
-                <div class="additional-product-card__quantity">
-                  <p class="additional-product-card__quantity-item">
-                    1 упаковка (100 г)
-                  </p>
-                  <p class="additional-product-card__quantity-item">200 ₽</p>
-                </div>
-                <a class="additional-product-card__button button" href="#"
-                  >Заказать</a
-                >
-              </article>
-            </li>
-            <li class="additional-product-list__item">
-              <article class="additional-product-card">
-                <h3 class="additional-product-card__heading">Питьевая вода</h3>
-                <div class="additional-product-card__quantity">
-                  <p class="additional-product-card__quantity-item">5 литров</p>
-                  <p class="additional-product-card__quantity-item">50 ₽</p>
-                </div>
-                <a class="additional-product-card__button button" href="#"
-                  >Заказать</a
-                >
-              </article>
-            </li>
-            <li class="additional-product-list__item">
-              <article class="additional-product-card">
-                <h3 class="additional-product-card__heading">Молоко</h3>
-                <div class="additional-product-card__quantity">
-                  <p class="additional-product-card__quantity-item">1 литр</p>
-                  <p class="additional-product-card__quantity-item">100 ₽</p>
-                </div>
-                <a class="additional-product-card__button button" href="#"
-                  >Заказать</a
-                >
-              </article>
-            </li>
-            <li class="additional-product-list__item">
-              <article class="additional-product-card">
-                <h3 class="additional-product-card__heading">Витамины</h3>
-                <div class="additional-product-card__quantity">
-                  <p class="additional-product-card__quantity-item">
-                    1 упаковка (30 г)
-                  </p>
-                  <p class="additional-product-card__quantity-item">300 ₽</p>
-                </div>
-                <a class="additional-product-card__button button" href="#"
-                  >Заказать</a
-                >
-              </article>
-            </li>
-          </ul>
-          <div class="additional-products__gift">
-            <p class="additional-products__gift-text">
-              Закажите все и получите чехол для кота в подарок!
-            </p>
-          </div>
+        <h2 class="additional-products__title">Дополнительные товары</h2>
+        <ul class="additional-product__list">
+          <li class="additional-product__item">
+            <article class="additional-product-card">
+              <h3 class="additional-product-card__heading">Сахарозаменитель</h3>
+              <div class="additional-product-card__quantity">
+                <p class="additional-product-card__quantity-item">
+                  1 упаковка (100 г)
+                </p>
+                <p class="additional-product-card__quantity-item">200 ₽</p>
+              </div>
+              <a class="additional-product-card__button button" href="#"
+                >Заказать</a
+              >
+            </article>
+          </li>
+          <li class="additional-product-list__item">
+            <article class="additional-product-card">
+              <h3 class="additional-product-card__heading">Питьевая вода</h3>
+              <div class="additional-product-card__quantity">
+                <p class="additional-product-card__quantity-item">5 литров</p>
+                <p class="additional-product-card__quantity-item">50 ₽</p>
+              </div>
+              <a class="additional-product-card__button button" href="#"
+                >Заказать</a
+              >
+            </article>
+          </li>
+          <li class="additional-product-list__item">
+            <article class="additional-product-card">
+              <h3 class="additional-product-card__heading">Молоко</h3>
+              <div class="additional-product-card__quantity">
+                <p class="additional-product-card__quantity-item">1 литр</p>
+                <p class="additional-product-card__quantity-item">100 ₽</p>
+              </div>
+              <a class="additional-product-card__button button" href="#"
+                >Заказать</a
+              >
+            </article>
+          </li>
+          <li class="additional-product-list__item">
+            <article class="additional-product-card">
+              <h3 class="additional-product-card__heading">Витамины</h3>
+              <div class="additional-product-card__quantity">
+                <p class="additional-product-card__quantity-item">
+                  1 упаковка (30 г)
+                </p>
+                <p class="additional-product-card__quantity-item">300 ₽</p>
+              </div>
+              <a class="additional-product-card__button button" href="#"
+                >Заказать</a
+              >
+            </article>
+          </li>
+        </ul>
+        <div class="additional-products__gift">
+          <p class="additional-products__gift-text">
+            Закажите все и получите чехол для кота в подарок!
+          </p>
         </div>
       </section>
     </main>
