--- a/source/catalog.html
+++ b/source/catalog.html
@@ -392,31 +392,50 @@
 
     <footer class="main-footer">
       <section class="main-footer__location location">
-        <div class="location__wrapper">
-          <h2 class="visually-hidden">Приглашение и локация</h2>
-          <div class="location__invation">
-            <h3 class="location__invation-title">
-              приглашаем <br />
-              к сотрудничеству дилеров!
-            </h3>
-            <address class="location__address">
-              <p class="location__address-text">
-                ул. Большая Конюшенная, д. 19/8
-              </p>
-              <p class="location__address-city">Санкт-Петербург</p>
-            </address>
-          </div>
-          <div class="location__map">
-            <iframe
-              class="location__map-iframe"
-              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1996.8224469757404!2d30.314833977305664!3d59.96826865971364!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5afc31%3A0x5f2ac55f567b2400!2sHTML%20Academy!5e0!3m2!1sru!2sru!4v1699541386937!5m2!1sru!2sru"
-              height="450"
-              style="border: 0"
-              allowfullscreen=""
-              loading="lazy"
-              referrerpolicy="no-referrer-when-downgrade"
-            ></iframe>
-          </div>
+        <h2 class="visually-hidden">Приглашение и локация</h2>
+        <div class="location__invation">
+          <h3 class="location__invation-title">
+            приглашаем <br />
+            к сотрудничеству дилеров!
+          </h3>
+          <address class="location__address">
+            <p class="location__address-text">
+              ул. Большая Конюшенная, д. 19/8
+            </p>
+            <p class="location__address-city">Санкт-Петербург</p>
+          </address>
+        </div>
+        <div class="location__map map">
+          <picture>
+            <source
+              media="(min-width: 1440px)"
+              srcset="./img/map-desktop.png"
+              width="1440"
+              height="400"
+            />
+            <source
+              media="(min-width: 769px)"
+              srcset="./img/map-tablet.png"
+              width="768"
+              height="400"
+            />
+            <img
+              class="map__image"
+              src="./img/map-mobile.png"
+              width="320"
+              height="362"
+              alt="Карта"
+            />
+          </picture>
+          <iframe
+            class="map__iframe"
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1996.8224469757404!2d30.314833977305664!3d59.96826865971364!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5afc31%3A0x5f2ac55f567b2400!2sHTML%20Academy!5e0!3m2!1sru!2sru!4v1699541386937!5m2!1sru!2sru"
+            height="450"
+            style="border: 0"
+            allowfullscreen=""
+            loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"
+          ></iframe>
         </div>
       </section>
 
