--- a/source/catalog.html
+++ b/source/catalog.html
@@ -38,23 +38,17 @@
           </button>
           <ul class="main-nav__list">
             <li class="main-nav__item">
-              <a
-                href="index.html"
-                class="main-nav__link main-nav__link--active main-nav__link--index main-nav__link--index-active"
-                >Главная</a
-              >
+              <a href="index.html" class="main-nav__link">Главная</a>
             </li>
             <li class="main-nav__item">
               <a
                 href="catalog.html"
-                class="main-nav__link main-nav__link--index"
+                class="main-nav__link main-nav__link--active"
                 >Каталог продукции</a
               >
             </li>
             <li class="main-nav__item">
-              <a href="form.html" class="main-nav__link main-nav__link--index"
-                >Подбор программы</a
-              >
+              <a href="form.html" class="main-nav__link">Подбор программы</a>
             </li>
           </ul>
         </nav>
@@ -69,13 +63,27 @@
         <ul class="catalog__list">
           <li class="catalog__item">
             <article class="catalog-card">
-              <img
-                class="catalog-card__image"
-                src="./img/catalog/catalog-1-mobile.png"
-                width="68"
-                height="86"
-                alt="упоковка продуктка"
-              />
+              <picture>
+                <source
+                  media="(min-width: 1440px)"
+                  srcset="./img/catalog/catalog-1-desktop.png"
+                  width="161"
+                  height="172"
+                />
+                <source
+                  media="(min-width: 769px)"
+                  srcset="./img/catalog/catalog-1-tablet.png"
+                  width="161"
+                  height="172"
+                />
+                <img
+                  class="catalog-card__image"
+                  src="./img/catalog/catalog-1-mobile.png"
+                  width="68"
+                  height="86"
+                  alt="упоковка продуктка"
+                />
+              </picture>
               <div class="catalog-card__description">
                 <h3 class="catalog-card__heading">Cat Energy PRO 500 г</h3>
                 <div class="catalog-card__content-description">
@@ -98,13 +106,27 @@
           </li>
           <li class="catalog__item">
             <article class="catalog-card">
-              <img
-                class="catalog-card__image"
-                src="./img/catalog/catalog-2-mobile.png"
-                width="84"
-                height="100"
-                alt="упоковка продуктка"
-              />
+              <picture>
+                <source
+                  media="(min-width: 1440px)"
+                  srcset="./img/catalog/catalog-2-desktop.png"
+                  width="172"
+                  height="196"
+                />
+                <source
+                  media="(min-width: 769px)"
+                  srcset="./img/catalog/catalog-2-tablet.png"
+                  width="168"
+                  height="206"
+                />
+                <img
+                  class="catalog-card__image"
+                  src="./img/catalog/catalog-2-mobile.png"
+                  width="84"
+                  height="100"
+                  alt="упоковка продуктка"
+                />
+              </picture>
               <div class="catalog-card__description">
                 <h3 class="catalog-card__heading">Cat Energy PRO 1000 г</h3>
                 <div class="catalog-card__content-description">
@@ -127,13 +149,27 @@
           </li>
           <li class="catalog__item">
             <article class="catalog-card">
-              <img
-                class="catalog-card__image"
-                src="./img/catalog/catalog-3-mobile.png"
-                width="68"
-                height="78"
-                alt="упоковка продуктка"
-              />
+              <picture>
+                <source
+                  media="(min-width: 1440px)"
+                  srcset="./img/catalog/catalog-3-desktop.png"
+                  width="163"
+                  height="174"
+                />
+                <source
+                  media="(min-width: 769px)"
+                  srcset="./img/catalog/catalog-3-tablet.png"
+                  width="163"
+                  height="174"
+                />
+                <img
+                  class="catalog-card__image"
+                  src="./img/catalog/catalog-3-mobile.png"
+                  width="68"
+                  height="78"
+                  alt="упоковка продуктка"
+                />
+              </picture>
               <div class="catalog-card__description">
                 <h3 class="catalog-card__heading">Cat Energy PRO 500 г</h3>
                 <div class="catalog-card__content-description">
@@ -156,13 +192,27 @@
           </li>
           <li class="catalog__item">
             <article class="catalog-card">
-              <img
-                class="catalog-card__image"
-                src="./img/catalog/catalog-4-mobile.png"
-                width="84"
-                height="100"
-                alt="упоковка продуктка"
-              />
+              <picture>
+                <source
+                  media="(min-width: 1440px)"
+                  srcset="./img/catalog/catalog-4-desktop.png"
+                  width="172"
+                  height="196"
+                />
+                <source
+                  media="(min-width: 769px)"
+                  srcset="./img/catalog/catalog-4-tablet.png"
+                  width="168"
+                  height="200"
+                />
+                <img
+                  class="catalog-card__image"
+                  src="./img/catalog/catalog-4-mobile.png"
+                  width="84"
+                  height="100"
+                  alt="упоковка продуктка"
+                />
+              </picture>
               <div class="catalog-card__description">
                 <h3 class="catalog-card__heading">Cat Energy PRO 1000 г</h3>
                 <div class="catalog-card__content-description">
@@ -185,13 +235,27 @@
           </li>
           <li class="catalog__item">
             <article class="catalog-card">
-              <img
-                class="catalog-card__image"
-                src="./img/catalog/catalog-5-mobile.png"
-                width="68"
-                height="78"
-                alt="упоковка продуктка"
-              />
+              <picture>
+                <source
+                  media="(min-width: 1440px)"
+                  srcset="./img/catalog/catalog-5-desktop.png"
+                  width="161"
+                  height="171"
+                />
+                <source
+                  media="(min-width: 769px)"
+                  srcset="./img/catalog/catalog-5-tablet.png"
+                  width="161"
+                  height="171"
+                />
+                <img
+                  class="catalog-card__image"
+                  src="./img/catalog/catalog-5-mobile.png"
+                  width="68"
+                  height="78"
+                  alt="упоковка продуктка"
+                />
+              </picture>
               <div class="catalog-card__description">
                 <h3 class="catalog-card__heading">Cat Energy slim 500 г</h3>
                 <div class="catalog-card__content-description">
@@ -214,13 +278,27 @@
           </li>
           <li class="catalog__item">
             <article class="catalog-card">
-              <img
-                class="catalog-card__image"
-                src="./img/catalog/catalog-6-mobile.png"
-                width="84"
-                height="100"
-                alt="упоковка продуктка"
-              />
+              <picture>
+                <source
+                  media="(min-width: 1440px)"
+                  srcset="./img/catalog/catalog-6-desktop.png"
+                  width="172"
+                  height="196"
+                />
+                <source
+                  media="(min-width: 769px)"
+                  srcset="./img/catalog/catalog-6-tablet.png"
+                  width="168"
+                  height="200"
+                />
+                <img
+                  class="catalog-card__image"
+                  src="./img/catalog/catalog-6-mobile.png"
+                  width="84"
+                  height="100"
+                  alt="упоковка продуктка"
+                />
+              </picture>
               <div class="catalog-card__description">
                 <h3 class="catalog-card__heading">Cat Energy slim 1000 г</h3>
                 <div class="catalog-card__content-description">
@@ -243,13 +321,27 @@
           </li>
           <li class="catalog__item">
             <article class="catalog-card">
-              <img
-                class="catalog-card__image"
-                src="./img/catalog/catalog-7-mobile.png"
-                width="72"
-                height="84"
-                alt="упоковка продуктка"
-              />
+              <picture>
+                <source
+                  media="(min-width: 1440px)"
+                  srcset="./img/catalog/catalog-7-desktop.png"
+                  width="163"
+                  height="174"
+                />
+                <source
+                  media="(min-width: 769px)"
+                  srcset="./img/catalog/catalog-7-tablet.png"
+                  width="163"
+                  height="174"
+                />
+                <img
+                  class="catalog-card__image"
+                  src="./img/catalog/catalog-7-mobile.png"
+                  width="72"
+                  height="84"
+                  alt="упоковка продуктка"
+                />
+              </picture>
               <div class="catalog-card__description">
                 <h3 class="catalog-card__heading">Cat Energy slim 500 г</h3>
                 <p class="catalog-card__quantity">
