Приступил к additional-products

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -392,7 +392,9 @@
       </section>
 
       <section class="catalog-page__additional-products additional-products">
-        <h2 class="additional-products__title">Дополнительные товары</h2>
+        <h2 class="additional-products__title title-medium">
+          Дополнительные товары
+        </h2>
         <ul class="additional-product__list">
           <li class="additional-product__item">
             <article class="additional-product-card">
