--- a/source/catalog.html
+++ b/source/catalog.html
@@ -449,9 +449,9 @@
             </article>
           </li>
         </ul>
-        <div class="additional-products__gift">
+        <div class="additional-products__gift gift">
           <svg
-            class="additional-products__gift-icon"
+            class="gift__icon"
             width="78"
             height="81"
             viewBox="0 0 78 81"
@@ -484,7 +484,7 @@
             />
           </svg>
 
-          <p class="additional-products__gift-text">
+          <p class="gift__text">
             Закажите все<br />
             и получите чехол для кота в подарок!
           </p>
