--- a/source/index.html
+++ b/source/index.html
@@ -167,67 +167,48 @@
               </div>
             </div>
           </div>
-          <div class="living-example__cat-result cat-result">
-            <picture>
-              <source
-                media="(min-width: 769px)"
-                srcset="../img/cat-before-tablet.png"
-                width="280"
-                height="512"
-              />
-              <img
-                class="cat-result__image"
-                src="./img/cat-before-mobile.png"
-                width="140"
-                height="256"
-                alt="кот до того"
-              />
-            </picture>
-            <button class="cat-result__button-range" type="button">
-              <svg
-                width="40"
-                height="256"
-                viewBox="0 0 40 256"
-                fill="none"
-                xmlns="http://www.w3.org/2000/svg"
-              >
-                <rect x="18" width="4" height="256" rx="2" fill="#666666" />
-                <rect
-                  x="1"
-                  y="109"
-                  width="38"
-                  height="38"
-                  rx="19"
-                  fill="white"
-                />
-                <path d="M16 119L8 128L16 137V119Z" fill="#666666" />
-                <path d="M32 128L24 119V137L32 128Z" fill="#666666" />
-                <rect
-                  x="1"
-                  y="109"
-                  width="38"
-                  height="38"
-                  rx="19"
-                  stroke="#666666"
-                  stroke-width="2"
-                />
-              </svg>
-            </button>
-            <picture>
-              <source
-                media="(min-width: 769px)"
-                srcset="../img/cat-after-tablet.png"
-                width="280"
-                height="512"
-              />
-              <img
-                class="cat-result__image"
-                src="./img/cat-after-mobile.png"
-                width="140"
-                height="256"
-                alt="кот до того"
-              />
-            </picture>
+          <div class="living-example__cat-result">
+            <div class="cat-result">
+              <ul class="cat-result__list">
+                <li class="cat-result__item cat-result__item--before">
+                  <picture>
+                    <source
+                      media="(min-width: 769px)"
+                      srcset=".img/cat-before-tablet.png"
+                      width="560"
+                      height="512"
+                    />
+                    <img
+                      class="cat-result__image"
+                      src="./img/cat-before-mobile.png"
+                      width="280"
+                      height="256"
+                      alt="кот до того"
+                    />
+                  </picture>
+                </li>
+                <li class="cat-result__item cat-result__item--after">
+                  <picture>
+                    <source
+                      media="(min-width: 769px)"
+                      srcset=".img/cat-after-tablet.png"
+                      width="560"
+                      height="512"
+                    />
+                    <img
+                      class="cat-result__image"
+                      src="./img/cat-after-mobile.png"
+                      width="280"
+                      height="256"
+                      alt="кот после того"
+                    />
+                  </picture>
+                </li>
+              </ul>
+              <button class="cat-result__control">
+                <span class="visually-hidden">Показать состояние кота</span>
+              </button>
+            </div>
           </div>
         </div>
       </section>
