Добавил анимацию стрелки

--- a/source/index.html
+++ b/source/index.html
@@ -174,7 +174,7 @@
                   <picture>
                     <source
                       media="(min-width: 769px)"
-                      srcset=".img/cat-before-tablet.png"
+                      srcset="./img/cat-before-tablet.png"
                       width="560"
                       height="512"
                     />
@@ -191,7 +191,7 @@
                   <picture>
                     <source
                       media="(min-width: 769px)"
-                      srcset=".img/cat-after-tablet.png"
+                      srcset="./img/cat-after-tablet.png"
                       width="560"
                       height="512"
                     />
@@ -380,6 +380,6 @@
       </div>
     </footer>
 
-    <script src="./script.js"></script>
+    <script src="./scripts/script.js"></script>
   </body>
 </html>
