--- a/source/catalog.html
+++ b/source/catalog.html
@@ -658,6 +658,6 @@
       </div>
     </footer>
 
-    <script src="./script.js"></script>
+    <script src="./scripts/script.js"></script>
   </body>
 </html>
