--- a/source/form.html
+++ b/source/form.html
@@ -429,6 +429,6 @@
       </div>
     </footer>
 
-    <script src="./script.js"></script>
+    <script src="./scripts/script.js"></script>
   </body>
 </html>
