Скорпировал map в form и в catalog

--- a/source/form.html
+++ b/source/form.html
@@ -282,19 +282,20 @@
           <picture>
             <source
               media="(min-width: 1440px)"
-              srcset="./img/map-desktop.png"
+              srcset="/img/map-desktop.png 1x, img/map-desktop@2x.png 2x"
               width="1440"
               height="400"
             />
             <source
               media="(min-width: 769px)"
-              srcset="./img/map-tablet.png"
+              srcset="/img/map-tablet.png 1x, img/map-tablet@2x.png 2x"
               width="768"
               height="400"
             />
             <img
               class="map__image"
-              src="./img/map-mobile.png"
+              src="/img/map-mobile.png"
+              srcset="./img/map-mobile@2x.png 2x"
               width="320"
               height="362"
               alt="Карта"
