Добавил изображения с 2-кратной плотностью в cat-result

--- a/source/index.html
+++ b/source/index.html
@@ -178,13 +178,17 @@
                   <picture>
                     <source
                       media="(min-width: 769px)"
-                      srcset="./img/cat-before-tablet.png"
+                      srcset="
+                        ./img/cat-before-tablet.png  1x,
+                        img/cat-before-tablet@2x.png 2x
+                      "
                       width="560"
                       height="512"
                     />
                     <img
                       class="cat-result__image"
-                      src="./img/cat-before-mobile.png"
+                      src="/img/cat-before-mobile.png"
+                      srcset="/img/cat-before-mobile@2x.png 2x"
                       width="280"
                       height="256"
                       alt="кот до того"
@@ -195,13 +199,17 @@
                   <picture>
                     <source
                       media="(min-width: 769px)"
-                      srcset="./img/cat-after-tablet.png"
+                      srcset="
+                        ./img/cat-after-tablet.png  1x,
+                        img/cat-after-tablet@2x.png 2x
+                      "
                       width="560"
                       height="512"
                     />
                     <img
                       class="cat-result__image"
                       src="./img/cat-after-mobile.png"
+                      srcset="/img/cat-after-mobile@2x.png 2x"
                       width="280"
                       height="256"
                       alt="кот после того"
