--- a/source/catalog.html
+++ b/source/catalog.html
@@ -66,19 +66,26 @@
               <picture>
                 <source
                   media="(min-width: 1440px)"
-                  srcset="./img/catalog/catalog-1-desktop.png"
+                  srcset="
+                    img/catalog/catalog-1-desktop.png    1x,
+                    img/catalog/catalog-1-desktop@2x.png 2x
+                  "
                   width="161"
                   height="172"
                 />
                 <source
                   media="(min-width: 769px)"
-                  srcset="./img/catalog/catalog-1-tablet.png"
+                  srcset="
+                    img/catalog/catalog-1-tablet.png    1x,
+                    img/catalog/catalog-1-tablet@2x.png 2x
+                  "
                   width="161"
                   height="172"
                 />
                 <img
                   class="catalog-card__image"
-                  src="./img/catalog/catalog-1-mobile.png"
+                  src="/img/catalog/catalog-1-mobile.png"
+                  srcset="img/catalog/catalog-1-mobile@2x.png"
                   width="68"
                   height="86"
                   alt="упоковка продуктка"
@@ -109,19 +116,26 @@
               <picture>
                 <source
                   media="(min-width: 1440px)"
-                  srcset="./img/catalog/catalog-2-desktop.png"
+                  srcset="
+                    img/catalog/catalog-2-desktop.png    1x,
+                    img/catalog/catalog-2-desktop@2x.png 2x
+                  "
                   width="172"
                   height="196"
                 />
                 <source
                   media="(min-width: 769px)"
-                  srcset="./img/catalog/catalog-2-tablet.png"
+                  srcset="
+                    img/catalog/catalog-2-tablet.png    1x,
+                    img/catalog/catalog-2-tablet@2x.png 2x
+                  "
                   width="168"
                   height="206"
                 />
                 <img
                   class="catalog-card__image"
-                  src="./img/catalog/catalog-2-mobile.png"
+                  src="/img/catalog/catalog-2-mobile.png"
+                  srcset="img/catalog/catalog-2-mobile@2x.png"
                   width="84"
                   height="100"
                   alt="упоковка продуктка"
@@ -152,19 +166,26 @@
               <picture>
                 <source
                   media="(min-width: 1440px)"
-                  srcset="./img/catalog/catalog-3-desktop.png"
+                  srcset="
+                    img/catalog/catalog-3-desktop.png    1x,
+                    img/catalog/catalog-3-desktop@2x.png 2x
+                  "
                   width="163"
                   height="174"
                 />
                 <source
                   media="(min-width: 769px)"
-                  srcset="./img/catalog/catalog-3-tablet.png"
+                  srcset="
+                    img/catalog/catalog-3-tablet.png    1x,
+                    img/catalog/catalog-3-tablet@2x.png 2x
+                  "
                   width="163"
                   height="174"
                 />
                 <img
                   class="catalog-card__image"
-                  src="./img/catalog/catalog-3-mobile.png"
+                  src="/img/catalog/catalog-3-mobile.png"
+                  srcset="img/catalog/catalog-3-mobile@2x.png"
                   width="68"
                   height="78"
                   alt="упоковка продуктка"
@@ -195,19 +216,26 @@
               <picture>
                 <source
                   media="(min-width: 1440px)"
-                  srcset="./img/catalog/catalog-4-desktop.png"
+                  srcset="
+                    img/catalog/catalog-4-desktop.png    1x,
+                    img/catalog/catalog-4-desktop@2x.png 2x
+                  "
                   width="172"
                   height="196"
                 />
                 <source
                   media="(min-width: 769px)"
-                  srcset="./img/catalog/catalog-4-tablet.png"
+                  srcset="
+                    img/catalog/catalog-4-tablet.png    1x,
+                    img/catalog/catalog-4-tablet@2x.png 2x
+                  "
                   width="168"
                   height="200"
                 />
                 <img
                   class="catalog-card__image"
-                  src="./img/catalog/catalog-4-mobile.png"
+                  src="/img/catalog/catalog-4-mobile.png"
+                  srcset="img/catalog/catalog-4-mobile@2x.png"
                   width="84"
                   height="100"
                   alt="упоковка продуктка"
@@ -238,19 +266,26 @@
               <picture>
                 <source
                   media="(min-width: 1440px)"
-                  srcset="./img/catalog/catalog-5-desktop.png"
+                  srcset="
+                    img/catalog/catalog-5-desktop.png    1x,
+                    img/catalog/catalog-5-desktop@2x.png 2x
+                  "
                   width="161"
                   height="171"
                 />
                 <source
                   media="(min-width: 769px)"
-                  srcset="./img/catalog/catalog-5-tablet.png"
+                  srcset="
+                    img/catalog/catalog-5-tablet.png    1x,
+                    img/catalog/catalog-5-tablet@2x.png 2x
+                  "
                   width="161"
                   height="171"
                 />
                 <img
                   class="catalog-card__image"
-                  src="./img/catalog/catalog-5-mobile.png"
+                  src="/img/catalog/catalog-5-mobile.png"
+                  srcset="img/catalog/catalog-5-mobile@2x.png"
                   width="68"
                   height="78"
                   alt="упоковка продуктка"
@@ -281,19 +316,26 @@
               <picture>
                 <source
                   media="(min-width: 1440px)"
-                  srcset="./img/catalog/catalog-6-desktop.png"
+                  srcset="
+                    img/catalog/catalog-6-desktop.png    1x,
+                    img/catalog/catalog-6-desktop@2x.png 2x
+                  "
                   width="172"
                   height="196"
                 />
                 <source
                   media="(min-width: 769px)"
-                  srcset="./img/catalog/catalog-6-tablet.png"
+                  srcset="
+                    img/catalog/catalog-6-tablet.png    1x,
+                    img/catalog/catalog-6-tablet@2x.png 2x
+                  "
                   width="168"
                   height="200"
                 />
                 <img
                   class="catalog-card__image"
-                  src="./img/catalog/catalog-6-mobile.png"
+                  src="/img/catalog/catalog-6-mobile.png"
+                  srcset="img/catalog/catalog-6-mobile@2x.png"
                   width="84"
                   height="100"
                   alt="упоковка продуктка"
@@ -324,19 +366,26 @@
               <picture>
                 <source
                   media="(min-width: 1440px)"
-                  srcset="./img/catalog/catalog-7-desktop.png"
+                  srcset="
+                    img/catalog/catalog-7-desktop.png    1x,
+                    img/catalog/catalog-7-desktop@2x.png 2x
+                  "
                   width="163"
                   height="174"
                 />
                 <source
                   media="(min-width: 769px)"
-                  srcset="./img/catalog/catalog-7-tablet.png"
+                  srcset="
+                    img/catalog/catalog-7-tablet.png    1x,
+                    img/catalog/catalog-7-tablet@2x.png 2x
+                  "
                   width="163"
                   height="174"
                 />
                 <img
                   class="catalog-card__image"
-                  src="./img/catalog/catalog-7-mobile.png"
+                  src="/img/catalog/catalog-7-mobile.png"
+                  srcset="img/catalog/catalog-7-mobile@2x.png"
                   width="72"
                   height="84"
                   alt="упоковка продуктка"
