--- a/source/catalog.html
+++ b/source/catalog.html
@@ -4,6 +4,15 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="icon" href="favicon.ico" />
+    <link rel="icon" href="img/favicons/favicon.svg" type="image/svg+xml" />
+    <link
+      rel="apple-touch-icon"
+      href="img/favicons/favicon-apple-180.png"
+      type="image/png"
+    />
+    <link rel="manifest" href="manifest.webmanifest" />
     <title>Каталог продукции</title>
   </head>
   <body>
