--- a/source/index.html
+++ b/source/index.html
@@ -4,10 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="./css/style.css" />
-    <!-- <link rel="icon" href="../favicon.ico" />
-    <link rel="icon" href="./img/favicons/favicon.svg" type="image/svg+xml" />
-    <link rel="apple-touch-icon" href="./img/favicons/apple-icon-180x180.png" />
-    <link rel="manifest" href="../manifest.webmanifest" /> -->
+    <link rel="icon" href="favicon.ico" />
+    <link rel="icon" href="img/favicons/favicon.svg" type="image/svg+xml" />
+    <link
+      rel="apple-touch-icon"
+      href="img/favicons/favicon-apple-180.png"
+      type="image/png"
+    />
+    <link rel="manifest" href="manifest.webmanifest" />
     <title>Главная</title>
   </head>
   <body class="page-body page-body--index">
