--- a/source/form.html
+++ b/source/form.html
@@ -179,20 +179,8 @@
                 value="kuklachev@gmail.com"
                 required
               />
-              <svg
-                class="text-input__icon"
-                width="18"
-                height="14"
-                viewBox="0 0 18 14"
-                fill="none"
-                xmlns="http://www.w3.org/2000/svg"
-              >
-                <path
-                  d="M0.500336 5.5V13.5H17.5041V5.5M0.500336 0.5H17.5041V2.5L9.00223 8.5L0.500336 2.5V0.5Z"
-                  stroke="black"
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                />
+              <svg class="text-input__icon" width="18" height="14">
+                <use xlink:href="img/sprite.svg#text-input-email"></use>
               </svg>
             </li>
             <li class="contact-details__item text-input text-input--phone">
@@ -205,20 +193,8 @@
                 value="8 (960) 900-60-90"
                 required
               />
-              <svg
-                class="text-input__icon"
-                width="16"
-                height="16"
-                viewBox="0 0 16 16"
-                fill="none"
-                xmlns="http://www.w3.org/2000/svg"
-              >
-                <path
-                  d="M7.00224 8H15.5041M15.5041 8L13.0036 5.5M15.5041 8L13.0036 10.5M5.50191 0.5V5.5H2.50124V10.5H5.50191V15.5H3.00135C1.50102 15.5 0.500793 14.5 0.500793 13V3C0.500793 1.5 1.50102 0.5 3.00135 0.5H5.50191Z"
-                  stroke="black"
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                />
+              <svg class="text-input__icon" width="16" height="16">
+                <use xlink:href="img/sprite.svg#text-input-phone"></use>
               </svg>
             </li>
           </ul>
