Добавил изображения cat-result с форматом webp, 1 и 2-кратной плотности пикселей

--- a/source/index.html
+++ b/source/index.html
@@ -181,6 +181,21 @@
                 <li class="cat-result__item cat-result__item--before">
                   <picture>
                     <source
+                      type="image/webp"
+                      media="(min-width: 769px)"
+                      srcset="
+                        /img/cat-before-tablet@1x.webp  1x,
+                        ./img/cat-before-tablet@2x.webp 2x
+                      "
+                    />
+                    <source
+                      type="image/webp"
+                      srcset="
+                        /img/cat-before-mobile@1x.webp  1x,
+                        ./img/cat-before-mobile@2x.webp 2x
+                      "
+                    />
+                    <source
                       media="(min-width: 769px)"
                       srcset="
                         ./img/cat-before-tablet.png  1x,
@@ -201,6 +216,21 @@
                 </li>
                 <li class="cat-result__item cat-result__item--after">
                   <picture>
+                    <source
+                      type="image/webp"
+                      media="(min-width: 769px)"
+                      srcset="
+                        img/cat-after-tablet@1x.webp 1x,
+                        img/cat-after-tablet@2x.webp 2x
+                      "
+                    />
+                    <source
+                      type="image/webp"
+                      srcset="
+                        img/cat-after-mobile@1x.webp 1x,
+                        img/cat-after-mobile@2x.webp 2x
+                      "
+                    />
                     <source
                       media="(min-width: 769px)"
                       srcset="
