Добавил изображение в формате webp в каталоге под моб. версию

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -74,6 +74,21 @@
             <article class="catalog-card">
               <picture>
                 <source
+                  type="image/webp"
+                  media="(min-width: 769px)"
+                  srcset="
+                    img/catalog/catalog-1-tablet.webp    1x,
+                    img/catalog/catalog-1-tablet@2x.webp 2x
+                  "
+                />
+                <source
+                  type="image/webp"
+                  srcset="
+                    img/catalog/catalog-1-mobile.webp    1x,
+                    img/catalog/catalog-1-mobile@2x.webp 2x
+                  "
+                />
+                <source
                   media="(min-width: 1440px)"
                   srcset="
                     img/catalog/catalog-1-desktop.png    1x,
@@ -123,6 +138,21 @@
           <li class="catalog__item">
             <article class="catalog-card">
               <picture>
+                <source
+                  type="image/webp"
+                  media="(min-width: 769px)"
+                  srcset="
+                    img/catalog/catalog-2-tablet.webp    1x,
+                    img/catalog/catalog-2-tablet@2x.webp 2x
+                  "
+                />
+                <source
+                  type="image/webp"
+                  srcset="
+                    img/catalog/catalog-2-mobile.webp    1x,
+                    img/catalog/catalog-2-mobile@2x.webp 2x
+                  "
+                />
                 <source
                   media="(min-width: 1440px)"
                   srcset="
@@ -174,6 +204,21 @@
             <article class="catalog-card">
               <picture>
                 <source
+                  type="image/webp"
+                  media="(min-width: 769px)"
+                  srcset="
+                    img/catalog/catalog-3-tablet.webp    1x,
+                    img/catalog/catalog-3-tablet@2x.webp 2x
+                  "
+                />
+                <source
+                  type="image/webp"
+                  srcset="
+                    img/catalog/catalog-3-mobile.webp    1x,
+                    img/catalog/catalog-3-mobile@2x.webp 2x
+                  "
+                />
+                <source
                   media="(min-width: 1440px)"
                   srcset="
                     img/catalog/catalog-3-desktop.png    1x,
@@ -223,6 +268,21 @@
           <li class="catalog__item">
             <article class="catalog-card">
               <picture>
+                <source
+                  type="image/webp"
+                  media="(min-width: 769px)"
+                  srcset="
+                    img/catalog/catalog-4-tablet.webp    1x,
+                    img/catalog/catalog-4-tablet@2x.webp 2x
+                  "
+                />
+                <source
+                  type="image/webp"
+                  srcset="
+                    img/catalog/catalog-4-mobile.webp    1x,
+                    img/catalog/catalog-4-mobile@2x.webp 2x
+                  "
+                />
                 <source
                   media="(min-width: 1440px)"
                   srcset="
@@ -274,6 +334,21 @@
             <article class="catalog-card">
               <picture>
                 <source
+                  type="image/webp"
+                  media="(min-width: 769px)"
+                  srcset="
+                    img/catalog/catalog-5-tablet.webp    1x,
+                    img/catalog/catalog-5-tablet@2x.webp 2x
+                  "
+                />
+                <source
+                  type="image/webp"
+                  srcset="
+                    img/catalog/catalog-5-mobile.webp    1x,
+                    img/catalog/catalog-5-mobile@2x.webp 2x
+                  "
+                />
+                <source
                   media="(min-width: 1440px)"
                   srcset="
                     img/catalog/catalog-5-desktop.png    1x,
@@ -324,6 +399,21 @@
             <article class="catalog-card">
               <picture>
                 <source
+                  type="image/webp"
+                  media="(min-width: 769px)"
+                  srcset="
+                    img/catalog/catalog-6-tablet.webp    1x,
+                    img/catalog/catalog-6-tablet@2x.webp 2x
+                  "
+                />
+                <source
+                  type="image/webp"
+                  srcset="
+                    img/catalog/catalog-6-mobile.webp    1x,
+                    img/catalog/catalog-6-mobile@2x.webp 2x
+                  "
+                />
+                <source
                   media="(min-width: 1440px)"
                   srcset="
                     img/catalog/catalog-6-desktop.png    1x,
@@ -373,6 +463,21 @@
           <li class="catalog__item">
             <article class="catalog-card">
               <picture>
+                <source
+                  type="image/webp"
+                  media="(min-width: 769px)"
+                  srcset="
+                    img/catalog/catalog-7-tablet.webp    1x,
+                    img/catalog/catalog-7-tablet@2x.webp 2x
+                  "
+                />
+                <source
+                  type="image/webp"
+                  srcset="
+                    img/catalog/catalog-7-mobile.webp    1x,
+                    img/catalog/catalog-7-mobile@2x.webp 2x
+                  "
+                />
                 <source
                   media="(min-width: 1440px)"
                   srcset="
