Добавил изображение в формате webp в каталоге под планшетную  версию

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -80,6 +80,8 @@
                     img/catalog/catalog-1-tablet.webp    1x,
                     img/catalog/catalog-1-tablet@2x.webp 2x
                   "
+                  width="161"
+                  height="172"
                 />
                 <source
                   type="image/webp"
@@ -145,6 +147,8 @@
                     img/catalog/catalog-2-tablet.webp    1x,
                     img/catalog/catalog-2-tablet@2x.webp 2x
                   "
+                  width="168"
+                  height="206"
                 />
                 <source
                   type="image/webp"
@@ -210,6 +214,8 @@
                     img/catalog/catalog-3-tablet.webp    1x,
                     img/catalog/catalog-3-tablet@2x.webp 2x
                   "
+                  width="163"
+                  height="174"
                 />
                 <source
                   type="image/webp"
@@ -275,6 +281,8 @@
                     img/catalog/catalog-4-tablet.webp    1x,
                     img/catalog/catalog-4-tablet@2x.webp 2x
                   "
+                  width="168"
+                  height="200"
                 />
                 <source
                   type="image/webp"
@@ -340,6 +348,8 @@
                     img/catalog/catalog-5-tablet.webp    1x,
                     img/catalog/catalog-5-tablet@2x.webp 2x
                   "
+                  width="161"
+                  height="171"
                 />
                 <source
                   type="image/webp"
@@ -405,6 +415,8 @@
                     img/catalog/catalog-6-tablet.webp    1x,
                     img/catalog/catalog-6-tablet@2x.webp 2x
                   "
+                  width="168"
+                  height="200"
                 />
                 <source
                   type="image/webp"
@@ -470,6 +482,8 @@
                     img/catalog/catalog-7-tablet.webp    1x,
                     img/catalog/catalog-7-tablet@2x.webp 2x
                   "
+                  width="163"
+                  height="174"
                 />
                 <source
                   type="image/webp"
