Добавил изображение в формате webp в каталоге под десктоп

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -75,6 +75,16 @@
               <picture>
                 <source
                   type="image/webp"
+                  media="(min-width: 1440px)"
+                  srcset="
+                    img/catalog/catalog-1-desktop.webp    1x,
+                    img/catalog/catalog-1-desktop@2x.webp 2x
+                  "
+                  width="161"
+                  height="172"
+                />
+                <source
+                  type="image/webp"
                   media="(min-width: 769px)"
                   srcset="
                     img/catalog/catalog-1-tablet.webp    1x,
@@ -140,6 +150,16 @@
           <li class="catalog__item">
             <article class="catalog-card">
               <picture>
+                <source
+                  type="image/webp"
+                  media="(min-width: 1440px)"
+                  srcset="
+                    img/catalog/catalog-2-desktop.webp    1x,
+                    img/catalog/catalog-2-desktop@2x.webp 2x
+                  "
+                  width="172"
+                  height="196"
+                />
                 <source
                   type="image/webp"
                   media="(min-width: 769px)"
@@ -209,6 +229,16 @@
               <picture>
                 <source
                   type="image/webp"
+                  media="(min-width: 1440px)"
+                  srcset="
+                    img/catalog/catalog-3-desktop.webp    1x,
+                    img/catalog/catalog-3-desktop@2x.webp 2x
+                  "
+                  width="163"
+                  height="174"
+                />
+                <source
+                  type="image/webp"
                   media="(min-width: 769px)"
                   srcset="
                     img/catalog/catalog-3-tablet.webp    1x,
@@ -274,6 +304,16 @@
           <li class="catalog__item">
             <article class="catalog-card">
               <picture>
+                <source
+                  type="image/webp"
+                  media="(min-width: 1440px)"
+                  srcset="
+                    img/catalog/catalog-4-desktop.webp    1x,
+                    img/catalog/catalog-4-desktop@2x.webp 2x
+                  "
+                  width="172"
+                  height="196"
+                />
                 <source
                   type="image/webp"
                   media="(min-width: 769px)"
@@ -343,6 +383,16 @@
               <picture>
                 <source
                   type="image/webp"
+                  media="(min-width: 1440px)"
+                  srcset="
+                    img/catalog/catalog-5-desktop.webp    1x,
+                    img/catalog/catalog-5-desktop@2x.webp 2x
+                  "
+                  width="161"
+                  height="171"
+                />
+                <source
+                  type="image/webp"
                   media="(min-width: 769px)"
                   srcset="
                     img/catalog/catalog-5-tablet.webp    1x,
@@ -410,6 +460,16 @@
               <picture>
                 <source
                   type="image/webp"
+                  media="(min-width: 1440px)"
+                  srcset="
+                    img/catalog/catalog-6-desktop.webp    1x,
+                    img/catalog/catalog-6-desktop@2x.webp 2x
+                  "
+                  width="172"
+                  height="196"
+                />
+                <source
+                  type="image/webp"
                   media="(min-width: 769px)"
                   srcset="
                     img/catalog/catalog-6-tablet.webp    1x,
@@ -475,6 +535,16 @@
           <li class="catalog__item">
             <article class="catalog-card">
               <picture>
+                <source
+                  type="image/webp"
+                  media="(min-width: 1440px)"
+                  srcset="
+                    img/catalog/catalog-7-desktop.webp    1x,
+                    img/catalog/catalog-7-desktop@2x.webp 2x
+                  "
+                  width="163"
+                  height="174"
+                />
                 <source
                   type="image/webp"
                   media="(min-width: 769px)"
