Добавил сборку gulpfile.js, package.json а также страницы. Добавил папку build в .gitignore

--- a/source/index.html
+++ b/source/index.html
@@ -182,34 +182,20 @@
                   <picture>
                     <source
                       type="image/webp"
-                      media="(min-width: 769px)"
-                      srcset="
-                        /img/cat-before-tablet@1x.webp  1x,
-                        ./img/cat-before-tablet@2x.webp 2x
-                      "
+                      media="(min-width: 768px)"
+                      srcset="./img/cat-before-tablet.webp 1x, ./img/cat-before-tablet@2x.webp 2x"
                     />
                     <source
                       type="image/webp"
-                      srcset="
-                        /img/cat-before-mobile@1x.webp  1x,
-                        ./img/cat-before-mobile@2x.webp 2x
-                      "
+                      srcset="./img/cat-before-mobile.webp 1x, ./img/cat-before-mobile@2x.webp 2x"
                     />
                     <source
-                      media="(min-width: 769px)"
-                      srcset="
-                        ./img/cat-before-tablet.png  1x,
-                        img/cat-before-tablet@2x.png 2x
-                      "
-                      width="560"
-                      height="512"
+                      media="(min-width: 768px)"
+                      srcset="./img/cat-before-tablet.png 1x, ./img/cat-before-tablet@2x.png 2x"
                     />
                     <img
                       class="cat-result__image"
-                      src="/img/cat-before-mobile.png"
-                      srcset="/img/cat-before-mobile@2x.png 2x"
-                      width="280"
-                      height="256"
+                      src="./img/cat-before-mobile.png" srcset="./img/cat-before-mobile@2x.png 2x"
                       alt="кот до того"
                     />
                   </picture>
@@ -220,15 +206,15 @@
                       type="image/webp"
                       media="(min-width: 769px)"
                       srcset="
-                        img/cat-after-tablet@1x.webp 1x,
+                        img/cat-after-tablet.webp 1x,
                         img/cat-after-tablet@2x.webp 2x
                       "
                     />
                     <source
                       type="image/webp"
                       srcset="
-                        img/cat-after-mobile@1x.webp 1x,
-                        img/cat-after-mobile@2x.webp 2x
+                        ./img/cat-after-mobile.webp 1x,
+                        ./img/cat-after-mobile@2x.webp 2x
                       "
                     />
                     <source
@@ -330,7 +316,7 @@
           <li class="social__item">
             <a href="#" class="social__link" aria-label="Вконтакте">
               <svg class="social__link-icon" width="29" height="22">
-                <use xlink:href="img/sprite.svg#vkontakte-icon"></use>
+                <use xlink:href="img/sprite.svg#vk"></use>
               </svg>
             </a>
           </li>
