--- a/source/index.html
+++ b/source/index.html
@@ -183,19 +183,29 @@
                     <source
                       type="image/webp"
                       media="(min-width: 768px)"
-                      srcset="./img/cat-before-tablet.webp 1x, ./img/cat-before-tablet@2x.webp 2x"
+                      srcset="
+                        ./img/cat-before-tablet.webp    1x,
+                        ./img/cat-before-tablet@2x.webp 2x
+                      "
                     />
                     <source
                       type="image/webp"
-                      srcset="./img/cat-before-mobile.webp 1x, ./img/cat-before-mobile@2x.webp 2x"
+                      srcset="
+                        ./img/cat-before-mobile.webp    1x,
+                        ./img/cat-before-mobile@2x.webp 2x
+                      "
                     />
                     <source
                       media="(min-width: 768px)"
-                      srcset="./img/cat-before-tablet.png 1x, ./img/cat-before-tablet@2x.png 2x"
+                      srcset="
+                        ./img/cat-before-tablet.png    1x,
+                        ./img/cat-before-tablet@2x.png 2x
+                      "
                     />
                     <img
                       class="cat-result__image"
-                      src="./img/cat-before-mobile.png" srcset="./img/cat-before-mobile@2x.png 2x"
+                      src="./img/cat-before-mobile.png"
+                      srcset="./img/cat-before-mobile@2x.png 2x"
                       alt="кот до того"
                     />
                   </picture>
@@ -206,14 +216,14 @@
                       type="image/webp"
                       media="(min-width: 769px)"
                       srcset="
-                        img/cat-after-tablet.webp 1x,
+                        img/cat-after-tablet.webp    1x,
                         img/cat-after-tablet@2x.webp 2x
                       "
                     />
                     <source
                       type="image/webp"
                       srcset="
-                        ./img/cat-after-mobile.webp 1x,
+                        ./img/cat-after-mobile.webp    1x,
                         ./img/cat-after-mobile@2x.webp 2x
                       "
                     />
@@ -323,14 +333,14 @@
           <li class="social__item">
             <a href="#" class="social__link" aria-label="Ютуб">
               <svg class="social__link-icon" width="29" height="22">
-                <use xlink:href="img/sprite.svg#youtube-icon"></use>
+                <use xlink:href="img/sprite.svg#youtube"></use>
               </svg>
             </a>
           </li>
           <li class="social__item">
             <a href="#" class="social__link" aria-label="Телеграм">
               <svg class="social__link-icon" width="29" height="22">
-                <use xlink:href="img/sprite.svg#telegram-icon"></use>
+                <use xlink:href="img/sprite.svg#telegram"></use>
               </svg>
             </a>
           </li>
