Добавил состояния в футере на других страницах, также добавил фокус в лого кэт-энерджи в футере

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -775,21 +775,21 @@
           <li class="social__item">
             <a href="#" class="social__link" aria-label="Вконтакте">
               <svg class="social__link-icon" width="29" height="22">
-                <use xlink:href="img/sprite.svg#vkontakte-icon"></use>
+                <use xlink:href="img/sprite.svg#vk"></use>
               </svg>
             </a>
           </li>
           <li class="social__item">
             <a href="#" class="social__link" aria-label="Ютуб">
               <svg class="social__link-icon" width="29" height="22">
-                <use xlink:href="img/sprite.svg#youtube-icon"></use>
+                <use xlink:href="img/sprite.svg#youtube"></use>
               </svg>
             </a>
           </li>
           <li class="social__item">
             <a href="#" class="social__link" aria-label="Телеграм">
               <svg class="social__link-icon" width="29" height="22">
-                <use xlink:href="img/sprite.svg#telegram-icon"></use>
+                <use xlink:href="img/sprite.svg#telegram"></use>
               </svg>
             </a>
           </li>
