--- a/source/form.html
+++ b/source/form.html
@@ -23,7 +23,7 @@
               media="(min-width: 1440px)"
               srcset="./img/logo-icon-desktop.svg"
               width="202"
-              heigh="59"
+              height="59"
             />
             <source
               media="(min-width: 769px)"
@@ -178,8 +178,20 @@
                 value="kuklachev@gmail.com"
                 required
               />
-              <svg class="text-input__icon" width="18" height="14">
-                <use xlink:href="img/sprite.svg#text-input-email"></use>
+              <svg
+                class="text-input__icon"
+                width="18"
+                height="14"
+                viewBox="0 0 18 14"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <path
+                  d="M0.500336 5.5V13.5H17.5041V5.5M0.500336 0.5H17.5041V2.5L9.00223 8.5L0.500336 2.5V0.5Z"
+                  stroke="black"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                />
               </svg>
             </li>
             <li class="contact-details__item text-input text-input--phone">
@@ -192,8 +204,20 @@
                 value="8 (960) 900-60-90"
                 required
               />
-              <svg class="text-input__icon" width="16" height="16">
-                <use xlink:href="img/sprite.svg#text-input-phone"></use>
+              <svg
+                class="text-input__icon"
+                width="16"
+                height="16"
+                viewBox="0 0 16 16"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <path
+                  d="M7.00224 8H15.5041M15.5041 8L13.0036 5.5M15.5041 8L13.0036 10.5M5.50191 0.5V5.5H2.50124V10.5H5.50191V15.5H3.00135C1.50102 15.5 0.500793 14.5 0.500793 13V3C0.500793 1.5 1.50102 0.5 3.00135 0.5H5.50191Z"
+                  stroke="black"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                />
               </svg>
             </li>
           </ul>
