--- a/source/index.html
+++ b/source/index.html
@@ -23,7 +23,7 @@
               media="(min-width: 1440px)"
               srcset="./img/logo-icon-desktop.svg"
               width="202"
-              heigh="59"
+              height="59"
             />
             <source
               media="(min-width: 769px)"
