Приступил к ошибкам, добавил width height в img в cat-before

--- a/source/index.html
+++ b/source/index.html
@@ -206,6 +206,8 @@
                       class="cat-result__image"
                       src="./img/cat-before-mobile.png"
                       srcset="./img/cat-before-mobile@2x.png 2x"
+                      width="280"
+                      height="256"
                       alt="кот до того"
                     />
                   </picture>
